--- a/compras.html
+++ b/compras.html
@@ -118,6 +118,9 @@
                 class="pb-4 text-xs font-black uppercase tracking-widest tab-active transition-all">En Proceso</button>
             <button id="tabCompletado" onclick="cambiarPestañaCompras('completado')"
                 class="pb-4 text-xs font-black uppercase tracking-widest text-gray-400 hover:text-gray-600 transition-all">Completadas</button>
+            <button id="tabTaller" onclick="cambiarPestañaCompras('taller')"
+                class="pb-4 text-xs font-black uppercase tracking-widest text-gray-400 hover:text-gray-600 transition-all flex items-center gap-2"><span
+                    class="material-symbols-outlined text-sm">build</span> Solicitudes Taller</button>
         </div>
 
         <div class="card overflow-hidden">
@@ -145,11 +148,17 @@
                         <option value="Completo">Completo</option>
                         <option value="Retrasado">Retrasado</option>
                     </select>
+                    <!-- BOTÓN NUEVA SOLICITUD TALLER -->
+                    <button id="btnNuevaSolicitudTaller" onclick="abrirModalSolicitudTaller()"
+                        class="hidden bg-black text-white px-4 py-2 rounded-xl text-[10px] font-black uppercase flex items-center gap-2 hover:brightness-110 shadow-lg">
+                        <span class="material-symbols-outlined text-sm">add_a_photo</span> Nueva Solicitud
+                    </button>
                 </div>
             </div>
 
             <div class="overflow-x-auto">
-                <table class="w-full text-left">
+                <!-- Tabla Compras Regular -->
+                <table id="tablaComprasRegular" class="w-full text-left">
                     <thead
                         class="bg-gray-50 text-[10px] font-black uppercase text-gray-400 tracking-widest border-b border-gray-100">
                         <tr>
@@ -165,6 +174,25 @@
                     </thead>
                     <tbody id="tablaComprasBody" class="divide-y divide-gray-50 text-sm font-bold">
                     </tbody>
+                </table>
+
+                <!-- Tabla Solicitudes Taller (Oculta por defecto) -->
+                <table id="tablaSolicitudesTaller" class="w-full text-left hidden">
+                    <thead
+                        class="bg-gray-50 text-[10px] font-black uppercase text-gray-400 tracking-widest border-b border-gray-100">
+                        <tr>
+                            <th class="px-6 py-5">Fecha / Límite</th>
+                            <th class="px-6 py-5">Pieza / Código</th>
+                            <th class="px-6 py-5">Proveedor</th>
+                            <th class="px-6 py-5">Marca</th>
+                            <th class="px-6 py-5 text-center">Cant.</th>
+                            <th class="px-6 py-5 text-center">Prioridad</th>
+                            <th class="px-6 py-5 text-center">Estatus</th>
+                            <th class="px-6 py-5 text-right">Precio Cliente</th>
+                            <th class="px-6 py-5 text-center">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tablaTallerBody" class="divide-y divide-gray-50 text-sm font-bold"></tbody>
                 </table>
             </div>
         </div>
@@ -263,6 +291,168 @@
                             </thead>
                             <tbody id="detListaProductos" class="font-bold"></tbody>
                         </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- MODAL: NUEVA SOLICITUD TALLER -->
+    <div id="modalSolicitudTaller"
+        class="fixed inset-0 bg-black/80 hidden z-[110] flex items-center justify-center p-4 backdrop-blur-sm">
+        <div class="bg-white rounded-3xl max-w-lg w-full p-8 max-h-[90vh] overflow-y-auto">
+            <h2 class="text-2xl font-black italic uppercase mb-2">Solicitud de Cotización</h2>
+            <p class="text-xs text-gray-400 font-bold uppercase tracking-widest mb-6">Taller Mecánico</p>
+
+            <div class="space-y-4">
+                <div class="grid grid-cols-2 gap-4">
+                    <div>
+                        <label class="text-[9px] font-black uppercase text-gray-400">Código</label>
+                        <input type="text" id="talCodigo"
+                            class="w-full bg-gray-50 border-gray-200 rounded-xl px-4 py-2 text-sm font-bold uppercase">
+                    </div>
+                    <div>
+                        <label class="text-[9px] font-black uppercase text-gray-400">Marca</label>
+                        <input type="text" id="talMarca"
+                            class="w-full bg-gray-50 border-gray-200 rounded-xl px-4 py-2 text-sm font-bold uppercase">
+                    </div>
+                </div>
+
+                <div>
+                    <label class="text-[9px] font-black uppercase text-gray-400">Nombre de la Pieza</label>
+                    <input type="text" id="talNombre"
+                        class="w-full bg-gray-50 border-gray-200 rounded-xl px-4 py-2 text-sm font-bold uppercase">
+                </div>
+
+                <div class="grid grid-cols-2 gap-4">
+                    <div>
+                        <label class="text-[9px] font-black uppercase text-gray-400">Cantidad</label>
+                        <input type="number" id="talCantidad" value="1"
+                            class="w-full bg-gray-50 border-gray-200 rounded-xl px-4 py-2 text-sm font-bold uppercase">
+                    </div>
+                    <div>
+                        <label class="text-[9px] font-black uppercase text-gray-400">Proveedor Sugerido</label>
+                        <input type="text" id="talProveedor"
+                            class="w-full bg-gray-50 border-gray-200 rounded-xl px-4 py-2 text-sm font-bold uppercase">
+                    </div>
+                </div>
+
+                <div>
+                    <label class="text-[9px] font-black uppercase text-gray-400">Referencias Adicionales</label>
+                    <textarea id="talReferencias" rows="2"
+                        class="w-full bg-gray-50 border-gray-200 rounded-xl px-4 py-2 text-sm font-medium uppercase"></textarea>
+                </div>
+
+                <div class="bg-gray-100 p-4 rounded-xl border border-gray-200">
+                    <label class="text-[9px] font-black uppercase text-gray-500 mb-2 block">Evidencia (Foto)</label>
+                    <input type="file" id="talEvidencia" accept="image/*" capture="environment"
+                        class="w-full text-xs font-bold file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-xs file:font-black file:bg-black file:text-white hover:file:bg-gray-800">
+                </div>
+
+                <div class="p-4 rounded-xl border-2 border-dashed border-gray-300">
+                    <label class="text-[9px] font-black uppercase text-gray-400">Prioridad</label>
+                    <div class="flex gap-4 mt-2">
+                        <label class="flex items-center gap-2 cursor-pointer">
+                            <input type="radio" name="tipoUrgencia" value="Normal" checked
+                                onchange="toggleMotivoUrgencia(false)" class="text-green-500 focus:ring-green-500">
+                            <span class="text-xs font-bold">Normal (48h)</span>
+                        </label>
+                        <label class="flex items-center gap-2 cursor-pointer">
+                            <input type="radio" name="tipoUrgencia" value="Urgente"
+                                onchange="toggleMotivoUrgencia(true)" class="text-red-500 focus:ring-red-500">
+                            <span class="text-xs font-bold text-red-500">Urgente</span>
+                        </label>
+                    </div>
+                    <div id="divMotivoUrgencia" class="hidden mt-3">
+                        <input type="text" id="talMotivo" placeholder="Motivo de la urgencia..."
+                            class="w-full bg-red-50 border-red-200 text-red-700 rounded-xl px-3 py-2 text-xs font-bold placeholder-red-300">
+                    </div>
+                </div>
+            </div>
+
+            <div class="flex gap-3 mt-8">
+                <button onclick="document.getElementById('modalSolicitudTaller').classList.add('hidden')"
+                    class="flex-1 py-3 text-gray-400 font-bold hover:bg-gray-50 rounded-xl">Cancelar</button>
+                <button onclick="guardarSolicitudTaller()"
+                    class="flex-1 bg-black text-white rounded-xl font-bold py-3 hover:scale-105 transition-transform shadow-xl">📝
+                    Registrar Solicitud</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- MODAL: GESTIONAR TALLER (ADMIN) -->
+    <div id="modalGestionTaller"
+        class="fixed inset-0 bg-black/80 hidden z-[110] flex items-center justify-center p-4 backdrop-blur-sm">
+        <div class="bg-white rounded-3xl max-w-2xl w-full p-8 flex flex-col max-h-[90vh]">
+            <div class="flex justify-between items-start mb-6">
+                <div>
+                    <h2 class="text-2xl font-black italic uppercase">Gestión de Cotización</h2>
+                    <p id="gesTituloPieza" class="text-xs text-gray-400 font-bold uppercase tracking-widest mt-1">Pieza
+                    </p>
+                </div>
+                <button onclick="document.getElementById('modalGestionTaller').classList.add('hidden')"
+                    class="bg-gray-100 rounded-full p-2"><span class="material-symbols-outlined">close</span></button>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 overflow-y-auto">
+                <!-- COLUMNA IZQUIERDA: EVIDENCIA Y DATOS -->
+                <div class="space-y-4">
+                    <div class="aspect-square bg-gray-100 rounded-2xl overflow-hidden relative group">
+                        <img id="gesImagen" src="" alt="Evidencia" class="w-full h-full object-cover">
+                        <a id="gesLinkImagen" href="#" target="_blank"
+                            class="absolute inset-0 bg-black/40 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity text-white font-bold text-xs uppercase">Ver
+                            Pantalla Completa</a>
+                        <div id="gesNoImagen"
+                            class="absolute inset-0 flex items-center justify-center text-gray-400 text-xs font-bold hidden">
+                            Sin Imagen Adjunta</div>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-xl space-y-2">
+                        <div class="flex justify-between text-xs border-b border-gray-200 pb-2">
+                            <span class="text-gray-400 font-bold">Solicitado:</span>
+                            <span id="gesFechaSol" class="font-bold"></span>
+                        </div>
+                        <div class="flex justify-between text-xs border-b border-gray-200 pb-2">
+                            <span class="text-gray-400 font-bold">Límite:</span>
+                            <span id="gesFechaLim" class="font-bold text-red-500"></span>
+                        </div>
+                        <div class="flex justify-between text-xs">
+                            <span class="text-gray-400 font-bold">Cantidad:</span>
+                            <span id="gesCantidad" class="font-bold"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- COLUMNA DERECHA: ACCIONES -->
+                <div class="space-y-6">
+                    <div>
+                        <label class="text-[9px] font-black uppercase text-gray-400">Precio Final al Cliente</label>
+                        <div class="relative mt-1">
+                            <span class="absolute left-4 top-3 text-gray-400 font-bold">$</span>
+                            <input type="number" id="gesPrecio" step="0.01"
+                                class="w-full pl-8 pr-4 py-3 bg-gray-50 border-gray-200 rounded-xl text-xl font-black text-gray-800 focus:ring-primary focus:border-primary">
+                        </div>
+                        <p class="text-[9px] text-gray-400 italic mt-1">* Ingresa el precio una vez tengas la cotización
+                            del proveedor.</p>
+                    </div>
+
+                    <div class="space-y-3">
+                        <p class="text-[9px] font-black uppercase text-gray-400 tracking-widest">Cambiar Estatus</p>
+
+                        <button onclick="actualizarEstatusTaller('Cotizado')"
+                            class="w-full py-4 bg-blue-50 text-blue-600 rounded-xl font-black uppercase text-xs hover:bg-blue-100 flex items-center justify-center gap-2 border border-blue-100 transition-all">
+                            <span class="material-symbols-outlined text-lg">currency_exchange</span> Marcar como
+                            Cotizado
+                        </button>
+
+                        <button onclick="actualizarEstatusTaller('Aceptado')"
+                            class="w-full py-4 bg-green-50 text-green-600 rounded-xl font-black uppercase text-xs hover:bg-green-100 flex items-center justify-center gap-2 border border-green-100 transition-all">
+                            <span class="material-symbols-outlined text-lg">check_circle</span> Aceptado por Cliente
+                        </button>
+                    </div>
+
+                    <div class="pt-4 border-t border-gray-100">
+                        <p class="text-[9px] font-black uppercase text-gray-400 mb-2">Detalles Solicitud</p>
+                        <p id="gesDetalles" class="text-xs text-gray-600 italic bg-gray-50 p-3 rounded-xl">hola</p>
                     </div>
                 </div>
             </div>
