--- a/rrhh_nomina.html
+++ b/rrhh_nomina.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
         rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -253,6 +254,20 @@
                 <div class="text-right">
                     <p class="text-[10px] font-black uppercase text-slate-400">Validación</p>
                     <p id="validacionPagos" class="text-xs font-bold text-green-600">Correcto</p>
+                </div>
+            </div>
+
+            <!-- Vista Previa Editable del Recibo -->
+            <div class="mb-6">
+                <h4 class="text-sm font-black text-slate-700 mb-3 flex items-center gap-2">
+                    <span class="material-symbols-outlined text-lg">description</span>
+                    Vista Previa de Recibo (Editable)
+                </h4>
+                <div id="previewReciboContainer"
+                    class="bg-slate-100 p-2 lg:p-6 rounded-2xl border-2 border-dashed border-slate-200 min-h-[200px] overflow-x-auto">
+                    <!-- El recibo se generará aquí -->
+                    <p class="text-center text-slate-400 py-10 font-bold italic">Selecciona un empleado para ver su
+                        recibo...</p>
                 </div>
             </div>
 
