--- a/rrhh_nomina.html
+++ b/rrhh_nomina.html
@@ -224,21 +224,33 @@
         class="fixed inset-0 bg-slate-900/50 hidden z-[200] flex items-center justify-center backdrop-blur-sm transition-all opacity-0">
         <div class="bg-white p-4 lg:p-8 rounded-3xl shadow-2xl w-full max-w-4xl scale-95 transition-all transform flex flex-col max-h-[90vh]"
             id="modalPagoContent">
-            <div class="mb-6 flex flex-col md:flex-row justify-between items-start md:items-center gap-4">
+            <div
+                class="mb-6 flex flex-col md:flex-row justify-between items-start md:items-center gap-6 border-b border-slate-100 pb-6">
                 <div>
                     <h3 class="text-xl font-black text-slate-800 mb-1">Confirmar Distribución de Pagos</h3>
-                    <p class="text-sm text-slate-500">Define los detalles globales y la distribución por empleado.</p>
+                    <p class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Ajustes Globales de Nómina
+                    </p>
                 </div>
-                <div class="flex flex-wrap gap-2">
+                <div class="flex flex-wrap gap-3">
                     <div class="flex flex-col">
                         <label class="text-[9px] font-black uppercase text-slate-400 mb-1">Fecha de Pago</label>
                         <input type="date" id="globalFechaPago" onchange="actualizarPreviewGlobal()"
-                            class="bg-slate-50 border-slate-200 rounded-lg text-xs font-bold py-2">
+                            class="bg-slate-50 border-slate-200 rounded-xl text-xs font-bold py-2 focus:ring-primary">
                     </div>
                     <div class="flex flex-col">
-                        <label class="text-[9px] font-black uppercase text-slate-400 mb-1">Sucursal de Pago</label>
+                        <label class="text-[9px] font-black uppercase text-slate-400 mb-1">Inicio Periodo</label>
+                        <input type="date" id="globalPeriodoInicio" onchange="actualizarPreviewGlobal()"
+                            class="bg-slate-50 border-slate-200 rounded-xl text-xs font-bold py-2 focus:ring-primary">
+                    </div>
+                    <div class="flex flex-col">
+                        <label class="text-[9px] font-black uppercase text-slate-400 mb-1">Fin Periodo</label>
+                        <input type="date" id="globalPeriodoFin" onchange="actualizarPreviewGlobal()"
+                            class="bg-slate-50 border-slate-200 rounded-xl text-xs font-bold py-2 focus:ring-primary">
+                    </div>
+                    <div class="flex flex-col">
+                        <label class="text-[9px] font-black uppercase text-slate-400 mb-1">Sucursal</label>
                         <select id="globalSucursal" onchange="actualizarPreviewGlobal()"
-                            class="bg-slate-50 border-slate-200 rounded-lg text-xs font-bold py-2">
+                            class="bg-slate-50 border-slate-200 rounded-xl text-xs font-bold py-2 focus:ring-primary">
                             <option value="Matriz">Matriz</option>
                             <option value="Norte">Norte</option>
                             <option value="Sur">Sur</option>
@@ -247,7 +259,7 @@
                     <div class="flex flex-col">
                         <label class="text-[9px] font-black uppercase text-slate-400 mb-1">Frecuencia</label>
                         <select id="globalFrecuencia" onchange="actualizarPreviewGlobal()"
-                            class="bg-slate-50 border-slate-200 rounded-lg text-xs font-bold py-2">
+                            class="bg-slate-50 border-slate-200 rounded-xl text-xs font-bold py-2 focus:ring-primary">
                             <option value="Quincenal">Quincenal</option>
                             <option value="Semanal">Semanal</option>
                         </select>
@@ -255,52 +267,57 @@
                 </div>
             </div>
 
-            <div class="overflow-y-auto flex-1 mb-6 border border-slate-100 rounded-2xl">
-                <table class="w-full text-left">
-                    <thead class="bg-slate-50 text-[10px] font-black uppercase text-slate-400 sticky top-0 z-10">
-                        <tr>
-                            <th class="px-6 py-4">Empleado</th>
-                            <th class="px-6 py-4 text-right">Total Neto</th>
-                            <th class="px-6 py-4 text-center w-1/3">Pago en Efectivo</th>
-                            <th class="px-6 py-4 text-center w-1/3">Transferencia</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tablaPagosBody" class="divide-y divide-slate-50 text-sm">
-                        <!-- Rows generadas por JS -->
-                    </tbody>
-                </table>
+            <div class="overflow-y-auto flex-1 pr-2 custom-scrollbar">
+                <!-- Estadísticas Rápidas -->
+                <div class="bg-slate-50 p-4 rounded-2xl flex justify-between items-center mb-6">
+                    <div>
+                        <p class="text-[10px] font-black uppercase text-slate-400">Total a Dispersar</p>
+                        <p id="totalDispersar" class="text-xl font-black text-slate-900">$0.00</p>
+                    </div>
+                    <div class="text-right">
+                        <p class="text-[10px] font-black uppercase text-slate-400">Estado de Validación</p>
+                        <p id="validacionPagos"
+                            class="text-xs font-bold text-green-600 flex items-center gap-1 justify-end">
+                            <span class="material-symbols-outlined text-sm">check_circle</span> Correcto
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Tabla de Empleados -->
+                <div class="mb-8 border border-slate-100 rounded-2xl overflow-hidden shadow-sm">
+                    <table class="w-full text-left">
+                        <thead class="bg-slate-50 text-[10px] font-black uppercase text-slate-400 sticky top-0 z-10">
+                            <tr>
+                                <th class="px-6 py-4">Empleado</th>
+                                <th class="px-6 py-4 text-right">Neto</th>
+                                <th class="px-6 py-4 text-center w-1/4">Efectivo</th>
+                                <th class="px-6 py-4 text-center w-1/4">Transferencia</th>
+                            </tr>
+                        </thead>
+                        <tbody id="tablaPagosBody" class="divide-y divide-slate-50 text-sm">
+                            <!-- Rows generadas por JS -->
+                        </tbody>
+                    </table>
+                </div>
+
+                <!-- Vista Previa Editable del Recibo -->
+                <div class="mb-4">
+                    <h4 class="text-sm font-black text-slate-700 mb-3 flex items-center gap-2">
+                        <span class="material-symbols-outlined text-lg">description</span>
+                        Vista Previa de Recibo (Editable)
+                    </h4>
+                    <div id="previewReciboContainer"
+                        class="bg-slate-50 p-2 lg:p-6 rounded-2xl border-2 border-dashed border-slate-200 min-h-[300px] overflow-x-auto shadow-inner">
+                        <!-- El recibo se generará aquí -->
+                    </div>
+                </div>
             </div>
 
-            <div class="bg-slate-50 p-4 rounded-2xl flex justify-between items-center mb-6">
-                <div>
-                    <p class="text-[10px] font-black uppercase text-slate-400">Total a Dispersar</p>
-                    <p id="totalDispersar" class="text-xl font-black text-slate-900">$0.00</p>
-                </div>
-                <div class="text-right">
-                    <p class="text-[10px] font-black uppercase text-slate-400">Validación</p>
-                    <p id="validacionPagos" class="text-xs font-bold text-green-600">Correcto</p>
-                </div>
-            </div>
-
-            <!-- Vista Previa Editable del Recibo -->
-            <div class="mb-6">
-                <h4 class="text-sm font-black text-slate-700 mb-3 flex items-center gap-2">
-                    <span class="material-symbols-outlined text-lg">description</span>
-                    Vista Previa de Recibo (Editable)
-                </h4>
-                <div id="previewReciboContainer"
-                    class="bg-slate-100 p-2 lg:p-6 rounded-2xl border-2 border-dashed border-slate-200 min-h-[200px] overflow-x-auto">
-                    <!-- El recibo se generará aquí -->
-                    <p class="text-center text-slate-400 py-10 font-bold italic">Selecciona un empleado para ver su
-                        recibo...</p>
-                </div>
-            </div>
-
-            <div class="flex gap-3">
+            <div class="flex gap-3 pt-6 border-t border-slate-100 mt-2">
                 <button onclick="cerrarModalPago()"
                     class="flex-1 px-6 py-3 rounded-xl font-bold text-slate-500 hover:bg-slate-50 transition-colors">Cancelar</button>
                 <button onclick="confirmarDisersionPagos()" id="btnConfirmarPagos"
-                    class="flex-1 bg-slate-900 text-white px-6 py-3 rounded-xl font-black shadow-lg hover:bg-black transition-transform">Confirmar
+                    class="flex-1 bg-slate-900 text-white px-6 py-3 rounded-xl font-black shadow-lg hover:bg-black transition-all hover:scale-[1.02] active:scale-95">Confirmar
                     y Registrar Gastos</button>
             </div>
         </div>
